@@ -1,3 +1,9 @@
+2011-07-09 Stefan Bidigaray <stefanbidi@gmail.com>
+
+	* Source/objc_interface.h: Add Objective-C runtime interface.
+	* Source/CFRuntime.m: Moved private functions to objc_interface.h.
+	* Source/CFString.c: First steps towards toll-free bridged objects.
+
 2011-07-08 Stefan Bidigaray <stefanbidi@gmail.com>
 
 	* Source/CFCalendar.c: Added implementation for
